feat:добавил функции согласно тз15